--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -540,338 +540,395 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Week</th>\n",
-       "      <th></th>\n",
+       "      <th>Date</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2014-12-29</th>\n",
-       "      <td>4</td>\n",
+       "      <th>69</th>\n",
+       "      <td>2016-04-25</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-05</th>\n",
+       "      <th>68</th>\n",
+       "      <td>2016-04-18</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-12</th>\n",
+       "      <th>67</th>\n",
+       "      <td>2016-04-11</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-19</th>\n",
+       "      <th>66</th>\n",
+       "      <td>2016-04-04</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-26</th>\n",
+       "      <th>65</th>\n",
+       "      <td>2016-03-28</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-02-02</th>\n",
+       "      <th>64</th>\n",
+       "      <td>2016-03-21</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-02-09</th>\n",
+       "      <th>63</th>\n",
+       "      <td>2016-03-14</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-02-16</th>\n",
+       "      <th>62</th>\n",
+       "      <td>2016-03-07</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-02-23</th>\n",
+       "      <th>61</th>\n",
+       "      <td>2016-02-29</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-03-02</th>\n",
+       "      <th>60</th>\n",
+       "      <td>2016-02-22</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-03-09</th>\n",
+       "      <th>59</th>\n",
+       "      <td>2016-02-15</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-03-16</th>\n",
+       "      <th>58</th>\n",
+       "      <td>2016-02-08</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-03-23</th>\n",
+       "      <th>57</th>\n",
+       "      <td>2016-02-01</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-03-30</th>\n",
+       "      <th>56</th>\n",
+       "      <td>2016-01-25</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-04-06</th>\n",
+       "      <th>55</th>\n",
+       "      <td>2016-01-18</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-04-13</th>\n",
+       "      <th>54</th>\n",
+       "      <td>2016-01-11</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-04-20</th>\n",
+       "      <th>53</th>\n",
+       "      <td>2016-01-04</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-04-27</th>\n",
+       "      <th>52</th>\n",
+       "      <td>2015-12-28</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-05-04</th>\n",
+       "      <th>51</th>\n",
+       "      <td>2015-12-21</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-05-11</th>\n",
+       "      <th>50</th>\n",
+       "      <td>2015-12-14</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-05-18</th>\n",
+       "      <th>49</th>\n",
+       "      <td>2015-12-07</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-05-25</th>\n",
+       "      <th>48</th>\n",
+       "      <td>2015-11-30</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-06-01</th>\n",
+       "      <th>47</th>\n",
+       "      <td>2015-11-23</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-06-08</th>\n",
+       "      <th>46</th>\n",
+       "      <td>2015-11-16</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-06-15</th>\n",
+       "      <th>45</th>\n",
+       "      <td>2015-11-09</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-06-22</th>\n",
+       "      <th>44</th>\n",
+       "      <td>2015-11-02</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-06-29</th>\n",
+       "      <th>43</th>\n",
+       "      <td>2015-10-26</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-07-06</th>\n",
+       "      <th>42</th>\n",
+       "      <td>2015-10-19</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-07-13</th>\n",
+       "      <th>41</th>\n",
+       "      <td>2015-10-12</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-07-20</th>\n",
+       "      <th>40</th>\n",
+       "      <td>2015-10-05</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-10-05</th>\n",
+       "      <th>29</th>\n",
+       "      <td>2015-07-20</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-10-12</th>\n",
+       "      <th>28</th>\n",
+       "      <td>2015-07-13</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-10-19</th>\n",
+       "      <th>27</th>\n",
+       "      <td>2015-07-06</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-10-26</th>\n",
+       "      <th>26</th>\n",
+       "      <td>2015-06-29</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-11-02</th>\n",
+       "      <th>25</th>\n",
+       "      <td>2015-06-22</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-11-09</th>\n",
+       "      <th>24</th>\n",
+       "      <td>2015-06-15</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-11-16</th>\n",
+       "      <th>23</th>\n",
+       "      <td>2015-06-08</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-11-23</th>\n",
+       "      <th>22</th>\n",
+       "      <td>2015-06-01</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-11-30</th>\n",
+       "      <th>21</th>\n",
+       "      <td>2015-05-25</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-12-07</th>\n",
+       "      <th>20</th>\n",
+       "      <td>2015-05-18</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-12-14</th>\n",
+       "      <th>19</th>\n",
+       "      <td>2015-05-11</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-12-21</th>\n",
+       "      <th>18</th>\n",
+       "      <td>2015-05-04</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-12-28</th>\n",
+       "      <th>17</th>\n",
+       "      <td>2015-04-27</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-01-04</th>\n",
+       "      <th>16</th>\n",
+       "      <td>2015-04-20</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-01-11</th>\n",
+       "      <th>15</th>\n",
+       "      <td>2015-04-13</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-01-18</th>\n",
+       "      <th>14</th>\n",
+       "      <td>2015-04-06</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-01-25</th>\n",
+       "      <th>13</th>\n",
+       "      <td>2015-03-30</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-02-01</th>\n",
+       "      <th>12</th>\n",
+       "      <td>2015-03-23</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-02-08</th>\n",
+       "      <th>11</th>\n",
+       "      <td>2015-03-16</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-02-15</th>\n",
+       "      <th>10</th>\n",
+       "      <td>2015-03-09</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-02-22</th>\n",
+       "      <th>9</th>\n",
+       "      <td>2015-03-02</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-02-29</th>\n",
+       "      <th>8</th>\n",
+       "      <td>2015-02-23</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-03-07</th>\n",
+       "      <th>7</th>\n",
+       "      <td>2015-02-16</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-03-14</th>\n",
+       "      <th>6</th>\n",
+       "      <td>2015-02-09</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-03-21</th>\n",
+       "      <th>5</th>\n",
+       "      <td>2015-02-02</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-03-28</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-26</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-04-04</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-19</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-04-11</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-12</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-04-18</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-05</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-04-25</th>\n",
-       "      <td>6</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-12-29</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>70 rows × 1 columns</p>\n",
+       "<p>70 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date\n",
-       "Week            \n",
-       "2014-12-29     4\n",
-       "2015-01-05     7\n",
-       "2015-01-12     7\n",
-       "2015-01-19     7\n",
-       "2015-01-26     7\n",
-       "2015-02-02     7\n",
-       "2015-02-09     7\n",
-       "2015-02-16     7\n",
-       "2015-02-23     7\n",
-       "2015-03-02     7\n",
-       "2015-03-09     7\n",
-       "2015-03-16     7\n",
-       "2015-03-23     7\n",
-       "2015-03-30     7\n",
-       "2015-04-06     7\n",
-       "2015-04-13     7\n",
-       "2015-04-20     7\n",
-       "2015-04-27     7\n",
-       "2015-05-04     7\n",
-       "2015-05-11     7\n",
-       "2015-05-18     7\n",
-       "2015-05-25     7\n",
-       "2015-06-01     7\n",
-       "2015-06-08     7\n",
-       "2015-06-15     7\n",
-       "2015-06-22     7\n",
-       "2015-06-29     7\n",
-       "2015-07-06     7\n",
-       "2015-07-13     7\n",
-       "2015-07-20     7\n",
-       "...          ...\n",
-       "2015-10-05     7\n",
-       "2015-10-12     7\n",
-       "2015-10-19     7\n",
-       "2015-10-26     7\n",
-       "2015-11-02     7\n",
-       "2015-11-09     7\n",
-       "2015-11-16     7\n",
-       "2015-11-23     7\n",
-       "2015-11-30     7\n",
-       "2015-12-07     7\n",
-       "2015-12-14     7\n",
-       "2015-12-21     7\n",
-       "2015-12-28     7\n",
-       "2016-01-04     7\n",
-       "2016-01-11     7\n",
-       "2016-01-18     7\n",
-       "2016-01-25     7\n",
-       "2016-02-01     7\n",
-       "2016-02-08     7\n",
-       "2016-02-15     7\n",
-       "2016-02-22     7\n",
-       "2016-02-29     7\n",
-       "2016-03-07     7\n",
-       "2016-03-14     7\n",
-       "2016-03-21     7\n",
-       "2016-03-28     7\n",
-       "2016-04-04     7\n",
-       "2016-04-11     7\n",
-       "2016-04-18     7\n",
-       "2016-04-25     6\n",
+       "          Week  Date\n",
+       "69  2016-04-25     6\n",
+       "68  2016-04-18     7\n",
+       "67  2016-04-11     7\n",
+       "66  2016-04-04     7\n",
+       "65  2016-03-28     7\n",
+       "64  2016-03-21     7\n",
+       "63  2016-03-14     7\n",
+       "62  2016-03-07     7\n",
+       "61  2016-02-29     7\n",
+       "60  2016-02-22     7\n",
+       "59  2016-02-15     7\n",
+       "58  2016-02-08     7\n",
+       "57  2016-02-01     7\n",
+       "56  2016-01-25     7\n",
+       "55  2016-01-18     7\n",
+       "54  2016-01-11     7\n",
+       "53  2016-01-04     7\n",
+       "52  2015-12-28     7\n",
+       "51  2015-12-21     7\n",
+       "50  2015-12-14     7\n",
+       "49  2015-12-07     7\n",
+       "48  2015-11-30     7\n",
+       "47  2015-11-23     7\n",
+       "46  2015-11-16     7\n",
+       "45  2015-11-09     7\n",
+       "44  2015-11-02     7\n",
+       "43  2015-10-26     7\n",
+       "42  2015-10-19     7\n",
+       "41  2015-10-12     7\n",
+       "40  2015-10-05     7\n",
+       "..         ...   ...\n",
+       "29  2015-07-20     7\n",
+       "28  2015-07-13     7\n",
+       "27  2015-07-06     7\n",
+       "26  2015-06-29     7\n",
+       "25  2015-06-22     7\n",
+       "24  2015-06-15     7\n",
+       "23  2015-06-08     7\n",
+       "22  2015-06-01     7\n",
+       "21  2015-05-25     7\n",
+       "20  2015-05-18     7\n",
+       "19  2015-05-11     7\n",
+       "18  2015-05-04     7\n",
+       "17  2015-04-27     7\n",
+       "16  2015-04-20     7\n",
+       "15  2015-04-13     7\n",
+       "14  2015-04-06     7\n",
+       "13  2015-03-30     7\n",
+       "12  2015-03-23     7\n",
+       "11  2015-03-16     7\n",
+       "10  2015-03-09     7\n",
+       "9   2015-03-02     7\n",
+       "8   2015-02-23     7\n",
+       "7   2015-02-16     7\n",
+       "6   2015-02-09     7\n",
+       "5   2015-02-02     7\n",
+       "4   2015-01-26     7\n",
+       "3   2015-01-19     7\n",
+       "2   2015-01-12     7\n",
+       "1   2015-01-05     7\n",
+       "0   2014-12-29     4\n",
        "\n",
-       "[70 rows x 1 columns]"
+       "[70 rows x 2 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('Week')[['Date']].aggregate(lambda x: x.unique().shape[0])"
+    "df.groupby('Week')[['Date']].aggregate(lambda x: x.unique().shape[0]).reset_index().sort_values(by='Week',ascending=False)"
    ]
   },
   {
