--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -942,38 +942,17 @@
     {
      "data": {
       "text/plain": [
-       "Index([u'AccountCurrencyCode', u'AccountDescriptiveName', u'AccountTimeZoneId',\n",
-       "       u'ActiveViewCpm', u'ActiveViewCtr', u'ActiveViewImpressions',\n",
-       "       u'ActiveViewMeasurability', u'ActiveViewMeasurableCost',\n",
-       "       u'ActiveViewMeasurableImpressions', u'ActiveViewViewability',\n",
-       "       u'AdNetworkType1', u'AdNetworkType2', u'AllConversionRate',\n",
-       "       u'AllConversions', u'AllConversionValue', u'AverageCost', u'AverageCpc',\n",
-       "       u'AverageCpe', u'AverageCpm', u'AverageCpv', u'AveragePosition',\n",
-       "       u'CanManageClients', u'ClickConversionRate', u'Clicks',\n",
-       "       u'ContentBudgetLostImpressionShare', u'ContentImpressionShare',\n",
-       "       u'ContentRankLostImpressionShare', u'ConversionRate', u'Conversions',\n",
-       "       u'ConversionValue', u'ConvertedClicks', u'Cost',\n",
-       "       u'CostPerAllConversion', u'CostPerConversion', u'CostPerConvertedClick',\n",
-       "       u'CrossDeviceConversions', u'Ctr', u'CustomerDescriptiveName', u'Date',\n",
-       "       u'DayOfWeek', u'Device', u'EngagementRate', u'Engagements',\n",
-       "       u'ExternalCustomerId', u'Impressions', u'InteractionRate',\n",
-       "       u'Interactions', u'InvalidClickRate', u'InvalidClicks',\n",
-       "       u'IsAutoTaggingEnabled', u'IsTestAccount', u'Month', u'MonthOfYear',\n",
-       "       u'PrimaryCompanyName', u'Quarter', u'SearchBudgetLostImpressionShare',\n",
-       "       u'SearchExactMatchImpressionShare', u'SearchImpressionShare',\n",
-       "       u'SearchRankLostImpressionShare', u'ValuePerAllConversion',\n",
-       "       u'ValuePerConversion', u'ValuePerConvertedClick', u'VideoViewRate',\n",
-       "       u'VideoViews', u'ViewThroughConversions', u'Week', u'Year'],\n",
-       "      dtype='object')"
+       "array([u'(GMT+00:00) London', u'(GMT+01:00) Madrid', u'(GMT+01:00) Paris',\n",
+       "       u'(GMT+01:00) Rome'], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "np.unique(df[['AccountTimeZoneId']])"
    ]
   },
   {
