--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -1002,6 +1002,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AdNetworkType1</th>\n",
+       "      <th>AdNetworkType2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Display Network</td>\n",
+       "      <td>Display Network</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Search Network</td>\n",
+       "      <td>Search partners</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Search Network</td>\n",
+       "      <td>Google search</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16255</th>\n",
+       "      <td>YouTube Videos</td>\n",
+       "      <td>YouTube Videos</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        AdNetworkType1   AdNetworkType2\n",
+       "0      Display Network  Display Network\n",
+       "1       Search Network  Search partners\n",
+       "5       Search Network    Google search\n",
+       "16255   YouTube Videos   YouTube Videos"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['AdNetworkType1','AdNetworkType2']].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
