--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -1130,14 +1130,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"2_146425330808\"><table><tr><th>AccountCurrencyCode</th><th>AccountDescriptiveName</th><th>AccountTimeZoneId</th></tr><tr><td>GBP</td><td>Hotels – UK 3</td><td>(GMT+00:00) GMT (no daylight saving)</td></tr><tr><td>GBP</td><td>Google - Flights 3 - International and Test - LMN UK</td><td>(GMT+00:00) GMT (no daylight saving)</td></tr><tr><td>EUR</td><td>LMN - Cruise</td><td>(GMT+01:00) Madrid</td></tr><tr><td>EUR</td><td>LMN Selfcat 1</td><td>(GMT+01:00) Paris</td></tr><tr><td>GBP</td><td>Brand</td><td>(GMT+00:00) London</td></tr><tr><td>GBP</td><td>Google - Apps</td><td>(GMT+00:00) London</td></tr><tr><td>EUR</td><td>lastminute.com HOTEL INTERNATIONAL</td><td>(GMT+01:00) Rome</td></tr><tr><td>GBP</td><td>Hotels – UK 2</td><td>(GMT+00:00) GMT (no daylight saving)</td></tr><tr><td>GBP</td><td>Hotel Names – Worldwide</td><td>(GMT+00:00) GMT (no daylight saving)</td></tr><tr><td>EUR</td><td>Lastminute PT Flights</td><td>(GMT+00:00) Lisbon</td></tr><tr><td>EUR</td><td>Bravofly FR</td><td>(GMT+01:00) Paris</td></tr><tr><td>EUR</td><td>BravoFly.com</td><td>(GMT+01:00) Rome</td></tr><tr><td>EUR</td><td>Volagratis Auto</td><td>(GMT+01:00) Rome</td></tr><tr><td>EUR</td><td>Google - ES - Flights 2</td><td>(GMT+01:00) Madrid</td></tr><tr><td>EUR</td><td>Rumbo.com Voli</td><td>(GMT+01:00) Madrid</td></tr><tr><td>EUR</td><td>Content - Lastminute FR</td><td>(GMT+01:00) Paris</td></tr><tr><td>GBP</td><td>Google - Flights - International and Test 2</td><td>(GMT+00:00) GMT (no daylight saving)</td></tr><tr><td>EUR</td><td>Svizzera Germania</td><td>(GMT+01:00) Zurich</td></tr><tr><td>EUR</td><td>Svizzera Francia</td><td>(GMT+01:00) Zurich</td></tr><tr><td>EUR</td><td>LMN - DP - IT</td><td>(GMT+01:00) Rome</td></tr><tr><td>EUR</td><td>Crocierissime</td><td>(GMT+01:00) Rome</td></tr><tr><td>EUR</td><td>lastminute_HOLI_Destination</td><td>(GMT+01:00) Berlin</td></tr><tr><td>EUR</td><td>lastminute+Nischen</td><td>(GMT+01:00) Berlin</td></tr><tr><td>EUR</td><td>LMN FR Brand</td><td>(GMT+01:00) Paris</td></tr><tr><td>EUR</td><td>Account Primario Volagratis</td><td>(GMT+01:00) Rome</td></tr></table></div>\n",
+       "    <br />(rows: 147, time: 0.9s,    15MB processed, job: job_QEuRvVa8BiN3URjSwe0QxVii1N8)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!2_146425330808', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"paged_table\",\n",
+       "              dataName:\"1\",\n",
+       "              fields:\"AccountCurrencyCode,AccountDescriptiveName,AccountTimeZoneId\",\n",
+       "              totalRows:147,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotels \\u2013 UK 3\"}, {\"v\": \"(GMT+00:00) GMT (no daylight saving)\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Google - Flights 3 - International and Test - LMN UK\"}, {\"v\": \"(GMT+00:00) GMT (no daylight saving)\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"LMN - Cruise\"}, {\"v\": \"(GMT+01:00) Madrid\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"LMN Selfcat 1\"}, {\"v\": \"(GMT+01:00) Paris\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Brand\"}, {\"v\": \"(GMT+00:00) London\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Google - Apps\"}, {\"v\": \"(GMT+00:00) London\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"lastminute.com HOTEL INTERNATIONAL\"}, {\"v\": \"(GMT+01:00) Rome\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotels \\u2013 UK 2\"}, {\"v\": \"(GMT+00:00) GMT (no daylight saving)\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Hotel Names \\u2013 Worldwide\"}, {\"v\": \"(GMT+00:00) GMT (no daylight saving)\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Lastminute PT Flights\"}, {\"v\": \"(GMT+00:00) Lisbon\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Bravofly FR\"}, {\"v\": \"(GMT+01:00) Paris\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"BravoFly.com\"}, {\"v\": \"(GMT+01:00) Rome\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Volagratis Auto\"}, {\"v\": \"(GMT+01:00) Rome\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Google - ES - Flights 2\"}, {\"v\": \"(GMT+01:00) Madrid\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Rumbo.com Voli\"}, {\"v\": \"(GMT+01:00) Madrid\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Content - Lastminute FR\"}, {\"v\": \"(GMT+01:00) Paris\"}]}, {\"c\": [{\"v\": \"GBP\"}, {\"v\": \"Google - Flights - International and Test 2\"}, {\"v\": \"(GMT+00:00) GMT (no daylight saving)\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Svizzera Germania\"}, {\"v\": \"(GMT+01:00) Zurich\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Svizzera Francia\"}, {\"v\": \"(GMT+01:00) Zurich\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"LMN - DP - IT\"}, {\"v\": \"(GMT+01:00) Rome\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Crocierissime\"}, {\"v\": \"(GMT+01:00) Rome\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"lastminute_HOLI_Destination\"}, {\"v\": \"(GMT+01:00) Berlin\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"lastminute+Nischen\"}, {\"v\": \"(GMT+01:00) Berlin\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"LMN FR Brand\"}, {\"v\": \"(GMT+01:00) Paris\"}]}, {\"c\": [{\"v\": \"EUR\"}, {\"v\": \"Account Primario Volagratis\"}, {\"v\": \"(GMT+01:00) Rome\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"AccountCurrencyCode\", \"label\": \"AccountCurrencyCode\"}, {\"type\": \"string\", \"id\": \"AccountDescriptiveName\", \"label\": \"AccountDescriptiveName\"}, {\"type\": \"string\", \"id\": \"AccountTimeZoneId\", \"label\": \"AccountTimeZoneId\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_QEuRvVa8BiN3URjSwe0QxVii1N8"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT \n",
+    "  AccountCurrencyCode,\n",
+    "  AccountDescriptiveName,\n",
+    "  AccountTimeZoneId\n",
+    "FROM \n",
+    "  [google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFORMANCE_DEVICE]\n",
+    "GROUP BY 1,2,3;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%%sql\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
