--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -1167,7 +1167,7 @@
     }
    ],
    "source": [
-    "%%sql\n",
+    "%%sql --module \n",
     "SELECT \n",
     "  AccountCurrencyCode,\n",
     "  AccountDescriptiveName,\n",
