--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1140,7 +1140,8 @@
     "SELECT \n",
     "  AccountCurrencyCode,\n",
     "  AccountDescriptiveName,\n",
-    "  AccountTimeZoneId\n",
+    "  AccountTimeZoneId,\n",
+    "  SUM(Cost) as Cost\n",
     "FROM \n",
     "  [google.com:ddm-connectors-demo:aw_dataset.ACCOUNT_PERFORMANCE_DEVICE]\n",
     "GROUP BY 1,2,3;"
@@ -1148,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1552,23 +1553,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AccountCurrencyCode</th>\n",
+       "      <th>AccountDescriptiveName</th>\n",
+       "      <th>AccountTimeZoneId</th>\n",
+       "      <th>Cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Account Primario Volagratis</td>\n",
+       "      <td>(GMT+01:00) Rome</td>\n",
+       "      <td>5456445961280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Rumbo Vuelos</td>\n",
+       "      <td>(GMT+01:00) Madrid</td>\n",
+       "      <td>5406284000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Google - BRG - IT - DP</td>\n",
+       "      <td>(GMT+01:00) Rome</td>\n",
+       "      <td>2246280798987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>BravoFly.com</td>\n",
+       "      <td>(GMT+01:00) Rome</td>\n",
+       "      <td>2019170340000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>GBP</td>\n",
+       "      <td>Brand</td>\n",
+       "      <td>(GMT+00:00) London</td>\n",
+       "      <td>1917281770000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>LMN Package</td>\n",
+       "      <td>(GMT+01:00) Paris</td>\n",
+       "      <td>1633280430000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>BRG - ES - DP</td>\n",
+       "      <td>(GMT+01:00) Madrid</td>\n",
+       "      <td>1622191780000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>GBP</td>\n",
+       "      <td>Hotels - London</td>\n",
+       "      <td>(GMT+00:00) London</td>\n",
+       "      <td>1514567270000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Crocierissime</td>\n",
+       "      <td>(GMT+01:00) Rome</td>\n",
+       "      <td>1184434500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>lastminute+HOLI-lastminute</td>\n",
+       "      <td>(GMT+01:00) Berlin</td>\n",
+       "      <td>1099333012000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Bravofly FR</td>\n",
+       "      <td>(GMT+01:00) Paris</td>\n",
+       "      <td>1048245530000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>BravoFly FR Tratte Exact</td>\n",
+       "      <td>(GMT+01:00) Rome</td>\n",
+       "      <td>936416480000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>BravoFly DK+SE</td>\n",
+       "      <td>(GMT+01:00) Copenhagen</td>\n",
+       "      <td>921844020000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>GBP</td>\n",
+       "      <td>Theatre</td>\n",
+       "      <td>(GMT+00:00) London</td>\n",
+       "      <td>846888040000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Volagratis Tratte Italia</td>\n",
+       "      <td>(GMT+01:00) Rome</td>\n",
+       "      <td>827837040000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Rumbo Hotels ES</td>\n",
+       "      <td>(GMT+01:00) Madrid</td>\n",
+       "      <td>818560300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Volagratis</td>\n",
+       "      <td>(GMT+01:00) Rome</td>\n",
+       "      <td>764410980000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Bravofly USA (new)</td>\n",
+       "      <td>(GMT+01:00) Zurich</td>\n",
+       "      <td>748702120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Rumbo Cruceros</td>\n",
+       "      <td>(GMT+01:00) Madrid</td>\n",
+       "      <td>695150860000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>EUR</td>\n",
+       "      <td>BravoFly DE</td>\n",
+       "      <td>(GMT+01:00) Berlin</td>\n",
+       "      <td>665010700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([u'EUR', u'GBP'], dtype=object)"
+       "    AccountCurrencyCode       AccountDescriptiveName       AccountTimeZoneId  \\\n",
+       "26                  EUR  Account Primario Volagratis        (GMT+01:00) Rome   \n",
+       "80                  EUR                 Rumbo Vuelos      (GMT+01:00) Madrid   \n",
+       "116                 EUR       Google - BRG - IT - DP        (GMT+01:00) Rome   \n",
+       "28                  EUR                 BravoFly.com        (GMT+01:00) Rome   \n",
+       "36                  GBP                        Brand      (GMT+00:00) London   \n",
+       "59                  EUR                  LMN Package       (GMT+01:00) Paris   \n",
+       "2                   EUR                BRG - ES - DP      (GMT+01:00) Madrid   \n",
+       "70                  GBP              Hotels - London      (GMT+00:00) London   \n",
+       "20                  EUR                Crocierissime        (GMT+01:00) Rome   \n",
+       "5                   EUR   lastminute+HOLI-lastminute      (GMT+01:00) Berlin   \n",
+       "45                  EUR                  Bravofly FR       (GMT+01:00) Paris   \n",
+       "81                  EUR     BravoFly FR Tratte Exact        (GMT+01:00) Rome   \n",
+       "18                  EUR               BravoFly DK+SE  (GMT+01:00) Copenhagen   \n",
+       "108                 GBP                      Theatre      (GMT+00:00) London   \n",
+       "17                  EUR     Volagratis Tratte Italia        (GMT+01:00) Rome   \n",
+       "114                 EUR              Rumbo Hotels ES      (GMT+01:00) Madrid   \n",
+       "112                 EUR                   Volagratis        (GMT+01:00) Rome   \n",
+       "63                  EUR           Bravofly USA (new)      (GMT+01:00) Zurich   \n",
+       "85                  EUR               Rumbo Cruceros      (GMT+01:00) Madrid   \n",
+       "107                 EUR                  BravoFly DE      (GMT+01:00) Berlin   \n",
+       "\n",
+       "              Cost  \n",
+       "26   5456445961280  \n",
+       "80   5406284000000  \n",
+       "116  2246280798987  \n",
+       "28   2019170340000  \n",
+       "36   1917281770000  \n",
+       "59   1633280430000  \n",
+       "2    1622191780000  \n",
+       "70   1514567270000  \n",
+       "20   1184434500000  \n",
+       "5    1099333012000  \n",
+       "45   1048245530000  \n",
+       "81    936416480000  \n",
+       "18    921844020000  \n",
+       "108   846888040000  \n",
+       "17    827837040000  \n",
+       "114   818560300000  \n",
+       "112   764410980000  \n",
+       "63    748702120000  \n",
+       "85    695150860000  \n",
+       "107   665010700000  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "geo.sort_values(by='Cost',ascending=False)[:20]"
+   ]
   },
   {
    "cell_type": "code",
