--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -1528,27 +1528,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([u'(GMT+00:00) Lisbon', u'(GMT+00:00) London', u'(GMT+01:00) Berlin',\n",
-       "       u'(GMT+01:00) Copenhagen', u'(GMT+01:00) Madrid',\n",
-       "       u'(GMT+01:00) Paris', u'(GMT+01:00) Rome', u'(GMT+01:00) Stockholm',\n",
-       "       u'(GMT+01:00) Zurich'], dtype=object)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.unique(geo[geo['AccountCurrencyCode'] == 'EUR']['AccountTimeZoneId'])"
+    "b = np.unique(geo[geo['AccountCurrencyCode'] == 'EUR']['AccountTimeZoneId'])"
    ]
   },
   {
@@ -1770,6 +1756,28 @@
    ],
    "source": [
     "geo.sort_values(by='Cost',ascending=False)[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'(GMT+00:00) Lisbon'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
