--- a/LF_lastminute/Exploratory analysis.ipynb
+++ b/LF_lastminute/Exploratory analysis.ipynb
@@ -1760,7 +1760,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[u'(GMT+00:00) Lisbon' u'(GMT+00:00) London' u'(GMT+01:00) Berlin'\n",
+      " u'(GMT+01:00) Copenhagen' u'(GMT+01:00) Madrid' u'(GMT+01:00) Paris'\n",
+      " u'(GMT+01:00) Rome' u'(GMT+01:00) Stockholm' u'(GMT+01:00) Zurich']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -1768,16 +1789,16 @@
     {
      "data": {
       "text/plain": [
-       "u'(GMT+00:00) Lisbon'"
+       "u'Lisbon'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "b[0][12:]"
    ]
   },
   {
