--- a/Untitled Notebook1.ipynb
+++ b/Untitled Notebook1.ipynb
@@ -7,6 +7,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World! Welcome to Notebooks!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet():\n",
+    "    print 'Hello World! Welcome to Notebooks!'\n",
+    "    \n",
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 36\n",
+      "drwxr-xr-x 5 root root 4096 May 26 15:36 .\n",
+      "drwxr-xr-x 3 root root 4096 May 26 15:30 ..\n",
+      "drwxr-xr-x 8 root root 4096 May 26 15:40 .git\n",
+      "-rw-r--r-- 1 root root   20 May 26 15:30 .gitignore\n",
+      "drwxr-xr-x 2 root root 4096 May 26 15:33 .ipynb_checkpoints\n",
+      "-rw-r--r-- 1 root root 1150 May 26 15:33 Hello World.ipynb\n",
+      "-rw-r--r-- 1 root root  653 May 26 15:32 Untitled Notebook.ipynb\n",
+      "-rw-r--r-- 1 root root  648 May 26 15:36 Untitled Notebook1.ipynb\n",
+      "drwxr-xr-x 5 root root 4096 May 26 15:30 datalab\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls -al"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
