--- a/PaoloFirstNotebook.ipynb
+++ b/PaoloFirstNotebook.ipynb
@@ -58,6 +58,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "number = 10\n",
+    "def square(n):\n",
+    "  return n * n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
