--- a/PaoloFirstNotebook.ipynb
+++ b/PaoloFirstNotebook.ipynb
@@ -7,19 +7,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World! Welcome to Notebooks!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def greet():\n",
     "    print 'Hello World! Welcome to Notebooks!'\n",
@@ -29,28 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 36\n",
-      "drwxr-xr-x 5 root root 4096 May 26 15:36 .\n",
-      "drwxr-xr-x 3 root root 4096 May 26 15:30 ..\n",
-      "drwxr-xr-x 8 root root 4096 May 26 15:40 .git\n",
-      "-rw-r--r-- 1 root root   20 May 26 15:30 .gitignore\n",
-      "drwxr-xr-x 2 root root 4096 May 26 15:33 .ipynb_checkpoints\n",
-      "-rw-r--r-- 1 root root 1150 May 26 15:33 Hello World.ipynb\n",
-      "-rw-r--r-- 1 root root  653 May 26 15:32 Untitled Notebook.ipynb\n",
-      "-rw-r--r-- 1 root root  648 May 26 15:36 Untitled Notebook1.ipynb\n",
-      "drwxr-xr-x 5 root root 4096 May 26 15:30 datalab\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "ls -al"
@@ -58,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -72,21 +47,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print square(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n"
+     "ename": "NameError",
+     "evalue": "name 'number' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-eb530160ef5f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[1;34m'The number is currently %d'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mnumber\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mnumber\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m11\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'And now it is %d'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0msquare\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'number' is not defined"
      ]
     }
    ],
    "source": [
-    "print square(100)"
+    "print 'The number is currently %d' % number\n",
+    "number = 11\n",
+    "sys.stderr.write('And now it is %d' % number)\n",
+    "\n",
+    "square(number)"
    ]
   },
   {
