--- a/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#"
+    "# Preminary operations\n",
+    "\n",
+    "Let us start by importing the relev"
    ]
   },
   {
